# realtime-embedded-systems

./: CMakeLists.txt
es-corsa/: assignment.txt  main-cond.c  main-sem.c
es-pasticceria/: main.c
es-rubabandiera/: assignment.txt  main-cond.c  main-sem.c
es01/: assignment.txt  main-cond.c  main.c
es02/: assignment.txt  main-01.c  main-02.c
es03/: assignment.txt  main.c
es04/: assignment.txt  main.c
es05/: assignment.txt  main.c
es07/: assignment.txt  main.c
es15/: assignment.txt  main.c
