cmake_minimum_required(VERSION 3.24)
project(realtime_embedded_systems C)

set(CMAKE_C_STANDARD 11)

add_executable(es01-cond es01/main-cond.c)
add_executable(es02-v2 es02/main-02.c)
add_executable(es04 es04/main.c)
add_executable(es05 es05/main.c)
add_executable(es-pasticceria es-pasticceria/main.c es-corsa/main-cond.c)
add_executable(es07 es07/main.c)
add_executable(es-corsa.cond es-corsa/main-cond.c)
add_executable(es-corsa.sem es-corsa/main-sem.c)
add_executable(es-rubabandiera.cond es-rubabandiera/main-cond.c)
add_executable(es-rubabandiera.sem es-rubabandiera/main-sem.c)